[package]
name = "game_launcher"
version = "0.1.0"
edition = "2021"
description = "Game launcher (Rust + Iced), compatible data layout with the Python launcher"

[dependencies]
# default включает wgpu — на части машин даёт STATUS_ACCESS_VIOLATION; tiny-skia — CPU-рендер
iced = { version = "0.13.1", default-features = false, features = [
    "tiny-skia",
    "image",
    "advanced",
    "tokio",
    "fira-sans",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }
image = { version = "0.24", default-features = false, features = ["png", "ico", "gif"] }
rfd = "0.15"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0"
lnk = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_Shell"] }
